Fix tabledrag handle vertical alignment

--- a/sass/components/tabledrag.scss
+++ b/sass/components/tabledrag.scss
@@ -3,7 +3,7 @@
 .draggable a.tabledrag-handle {
   display: inline-block;
   float: none;
-  vertical-align: middle;
+  vertical-align: top;
 
   .handle {
     margin-left: 0;
